/// Allows for interacting with relay services
syntax = 'proto3';

package relay;

option go_package = "github.com/imperviousai/imp-daemon/gen";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
	info: {
		title: "Relay Services";
		version: "1.0";
		contact: {
			name: "Impervious AI";
			url: "https://impervious.ai";
		};
	};
	external_docs: {
		url: "https://docs.impervious.ai";
		description: "Documentation on IMP";
	}
	schemes: HTTP;
	schemes: HTTPS;
	schemes: WSS;
	consumes: "application/json";
	produces: "application/json";
	security_definitions: {
		security: {
			key: "api_key";
			value: {
				type: 2;
				description: "An API key generated by the daemon for authentication";
				name: "Grpc-Metadata-X-API-KEY";
				in: 3;
			}
		}
	}
	security: {
		security_requirement: {
			key: "api_key";
		}
	}
};


/**
* Relay service allows for interacting with relay services.
*/
service Relay {
	/**
	* RequestRelay requests a relay to a specific node.
	*/
	rpc RequestRelay(RequestRelayRequest) returns (RequestRelayResponse) {
		option (google.api.http) = {
			post: "/v1/relay/request"
			body: "*"
		};
	}

	/**
	* RequestMailbox requests a relay to send over stored mailbox messages.
	*/
	rpc RequestMailbox(RequestMailboxRequest) returns (RequestMailboxResponse) {
		option (google.api.http) = {
			post: "/v1/relay/mailbox"
			body: "*"
		};
	}
}

message ServiceEndpoint {
	string id = 1; // The ID of the service endpoint
	string type = 2; // The type of the service endpoint
	string serviceEndpoint = 3; // The service endpoint URI
}

/**
 * Represents a request to a relay node to delegate them as a relay
 */
message RequestRelayRequest {
	string toDID = 1; // The DID you want to request to be a relay
	int64 amount = 2; // The amount of satoshis to send for the request
	repeated ServiceEndpoint privateServiceEndpoints = 3; // The private service endpoints to request the relay to forward messages to
}

/**
 * Represents a response back from a relay request
 */
message RequestRelayResponse {
	string id = 1; // returned message ID
}

/**
 * Represents a request to a relay node to send over mailbox messages
 */
message RequestMailboxRequest {
	string toDID = 1; // The DID you want to request to be a relay
	int64 amount = 2; // The amount of satoshis to send for the request
	repeated ServiceEndpoint privateServiceEndpoints = 3; // The private service endpoints to request the relay to forward messages to
}

/**
 * Represents a response back from a relay request
 */
message RequestMailboxResponse {
	string id = 1; // returned message ID
}
